[project]
name = "reolink-firmware-checker"
version = "0.1.0"
description = "Check for Reolink NVR firmware updates"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "packaging (>=25.0,<26.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<8"
requests-mock = "^1.12.1"

